--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,12 +9,12 @@ socket2 = "0.5"
 
 [dependencies.eframe]
 version = "0.27"
-default-features = false
+default-features = true
 features = ["default_fonts", "wgpu"]
 
 [dependencies.tokio]
 version = "1.27"
-default-features = false
+default-features = true
 features = ["macros", "net", "parking_lot", "rt", "sync"]
 
 [profile.release]
